--- a/index.html
+++ b/index.html
@@ -48,40 +48,37 @@
       <section id="link">
         <div class="container">
           <div class="flex justify-center">
-            <div class="grid grid-cols-2 gap-2">
-              <div
-                class="bg-[#FAE3BA] w-full px-10 py-6 rounded-lg transition ease-in-out duration-500 md:px-20 md:py-10 group hover:bg-gray-800 hover:transition hover:duration-500 hover:ease-in-out"
+            <div
+              class="bg-[#FAE3BA] w-full px-10 py-6 rounded-lg transition ease-in-out duration-500 md:px-20 md:py-10 group hover:bg-gray-800 hover:transition hover:duration-500 hover:ease-in-out"
+            >
+              <a
+                href="https://wa.me/6283872276428"
+                target="_blank"
+                class="text-2xl text-gray-600 transition duration-500 ease-in-out group-hover:text-white"
               >
-                <a
-                  href="https://wa.me/6283872276428"
-                  target="_blank"
-                  class="text-2xl text-gray-600 transition duration-500 ease-in-out group-hover:text-white"
-                >
-                  <div class="text-center">
-                    <i class="bi bi-whatsapp"></i>
-                    <h1 class="text-sm mt-3 font-semibold">Shandy</h1>
-                  </div>
-                </a>
-              </div>
-              <div
-                class="bg-[#FAE3BA] w-full px-10 py-6 rounded-lg transition ease-in-out duration-500 md:px-20 md:py-10 group hover:bg-gray-800 hover:transition hover:duration-500 hover:ease-in-out"
-              >
-                <a
-                  href="https://wa.me/6281211723328"
-                  target="_blank"
-                  class="text-2xl text-gray-600 transition duration-500 ease-in-out group-hover:text-white"
-                >
-                  <div class="text-center">
-                    <i class="bi bi-whatsapp"></i>
-                    <h1 class="text-sm mt-3 font-semibold">Fauzan</h1>
-                  </div>
-                </a>
-              </div>
+                <div class="text-center">
+                  <i class="bi bi-whatsapp"></i>
+                  <h1 class="text-sm mt-3 font-semibold">Admin 1</h1>
+                </div>
+              </a>
             </div>
           </div>
         </div>
       </section>
       <!-- link section end -->
+
+      <!-- ad section start -->
+      <div class="container">
+        <h1
+          class="text-center font-bold text-base md:text-2xl lg:text-lg mt-24 mb-10"
+        >
+          Iklan Kami
+        </h1>
+        <div class="flex justify-center">
+          <img src="img/poster.png" alt="poster" style="width: 80%" />
+        </div>
+      </div>
+      <!-- ad section end -->
 
       <!-- footer section start -->
       <footer class="w-full mt-24 py-10">
@@ -90,7 +87,7 @@
             <p class="text-gray-600 text-xs">
               &copy; Created By Shandy Dwi 2024
             </p>
-            <p class="text-gray-600 text-xs">Version 1.0</p>
+            <p class="text-gray-600 text-xs">Version 1.1</p>
           </div>
         </div>
       </footer>
