--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
               class="bg-[#FAE3BA] w-full px-10 py-6 rounded-lg transition ease-in-out duration-500 md:px-20 md:py-10 group hover:bg-gray-800 hover:transition hover:duration-500 hover:ease-in-out"
             >
               <a
-                href="https://wa.me/6283872276428"
+                href="https://wa.me/6281211723328"
                 target="_blank"
                 class="text-2xl text-gray-600 transition duration-500 ease-in-out group-hover:text-white"
               >
                 <div class="text-center">
                   <i class="bi bi-whatsapp"></i>
-                  <h1 class="text-sm mt-3 font-semibold">Admin 1</h1>
+                  <h1 class="text-sm mt-3 font-semibold">Admin</h1>
                 </div>
               </a>
             </div>
